--- a/.github/workflows/nightly-it-example-generator.yml
+++ b/.github/workflows/nightly-it-example-generator.yml
@@ -17,16 +17,16 @@
 
 name: Nightly - IT Example Generator
 
-on:
-  schedule:
-    - cron: '0 19 */1 * *'  # once a day. UTC time
+#on:
+#  schedule:
+#    - cron: '0 19 */1 * *'  # once a day. UTC time
 
 env:
   MAVEN_OPTS: -Dhttp.keepAlive=false -Dmaven.wagon.http.pool=false -Dmaven.wagon.http.retryHandler.class=standard -Dmaven.wagon.http.retryHandler.count=3 -Dcheckstyle.skip=true
 
 jobs:
   example-generator:
-    if: github.repository == 'apache/shardingsphere'
+    # if: github.repository == 'apache/shardingsphere'
     name: Example-${{ matrix.feature }}--${{ matrix.framework }}--${{ matrix.mode }}--${{ matrix.transaction }}
     runs-on: ubuntu-latest
     strategy:
