--- a/.github/workflows/nightly-build-example.yml
+++ b/.github/workflows/nightly-build-example.yml
@@ -58,7 +58,7 @@ jobs:
       matrix:
         feature: [ sharding, readwrite-splitting, encrypt, shadow, mask ]
         framework: [ jdbc, spring-boot-starter-jdbc, spring-boot-starter-jpa, spring-boot-starter-mybatis, spring-namespace-jdbc, spring-namespace-jpa, spring-namespace-mybatis ]
-        mode: [ standalone, cluster-zookeeper ]
+        mode: [ standalone, cluster-zookeeper, cluster-etcd ]
         transaction: [ local ]
         product: [ jdbc ]
         exclude: 
@@ -79,6 +79,11 @@ jobs:
         ports:
           - 2181:2181
         options: --health-cmd="echo ruok | nc localhost 2181" --health-interval=10s --health-timeout=5s --health-retries=3
+      etcd:
+        image: quay.io/coreos/etcd:v3.4.13
+        ports:
+          - 2379:2379
+        options: --health-cmd="etcdctl endpoint health" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
