--- a/.github/workflows/nightly-build-example.yml
+++ b/.github/workflows/nightly-build-example.yml
@@ -28,7 +28,7 @@ env:
 
 jobs:
   build-cache:
-    if: github.repository == 'apache/shardingsphere'
+#    if: github.repository == 'apache/shardingsphere'
     name: Build Cache
     runs-on: ubuntu-latest
     timeout-minutes: 90
@@ -48,7 +48,7 @@ jobs:
         run: ./mvnw -B -T1C -ntp clean install -DskipITs -DskipTests
 
   generate-and-test-examples:
-    if: github.repository == 'apache/shardingsphere'
+#    if: github.repository == 'apache/shardingsphere'
     name: Example-${{ matrix.feature }}-${{ matrix.framework }}-${{ matrix.mode }}-${{ matrix.transaction }}
     runs-on: ubuntu-latest
     timeout-minutes: 90
