--- a/.github/workflows/nightly-build-example.yml
+++ b/.github/workflows/nightly-build-example.yml
@@ -80,7 +80,7 @@ jobs:
         ports:
           - 2181:2181
         options: --health-cmd="echo ruok | nc localhost 2181" --health-interval=10s --health-timeout=5s --health-retries=3
-      if: matrix.mode == 'cluster-etcd'
+      elseif: matrix.mode == 'cluster-etcd'
       etcd:
         image: quay.io/coreos/etcd:v3.4.13
         ports:
