--- a/test/e2e/compatibility/src/test/resources/it-env.properties
+++ b/test/e2e/compatibility/src/test/resources/it-env.properties
@@ -14,22 +14,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-# pipeline.it.type=NONE,DOCKER,NATIVE
-pipeline.it.env.type=NONE
-# pipeline.it.docker.mysql.version=mysql:5.7,mysql:8.0
-pipeline.it.docker.mysql.version=
-# pipeline.it.docker.postgresql.version=postgres:10-alpine,postgres:11-alpine,postgres:12-alpine,postgres:13-alpine,postgres:14-alpine
-pipeline.it.docker.postgresql.version=
-# pipeline.it.docker.opengauss.version=enmotech/opengauss:3.0.0,enmotech/opengauss:2.1.0
-pipeline.it.docker.opengauss.version=
-# pipeline.it.native.database=mysql or postgresql or opengauss
-pipeline.it.native.database=
-pipeline.it.native.mysql.username=root
-pipeline.it.native.mysql.password=Root@123
-pipeline.it.native.mysql.port=3306
-pipeline.it.native.postgresql.username=postgres
-pipeline.it.native.postgresql.password=Root@123
-pipeline.it.native.postgresql.port=5432
-pipeline.it.native.opengauss.username=gaussdb
-pipeline.it.native.opengauss.password=Root@123
-pipeline.it.native.opengauss.port=5432
+# compatibility.it.type=NONE,DOCKER,NATIVE
+compatibility.it.env.type=NONE
+# compatibility.it.docker.mysql.version=mysql:8.0
+compatibility.it.docker.mysql.version=
+# compatibility.it.native.database=mysql or postgresql or opengauss
+compatibility.it.native.database=
+compatibility.it.native.mysql.username=root
+compatibility.it.native.mysql.password=Root@123
+compatibility.it.native.mysql.port=3306
