split sql by result file

--- a/test/e2e/compatibility/src/test/resources/env/it-env.properties
+++ b/test/e2e/compatibility/src/test/resources/env/it-env.properties
@@ -15,7 +15,7 @@
 # limitations under the License.
 #
 # compatibility.it.type=NONE,DOCKER,NATIVE
-compatibility.it.env.type=NONE
+compatibility.it.env.type=NATIVE
 # compatibility.it.docker.mysql.version=mysql:8.0
 compatibility.it.docker.mysql.version=
 # compatibility.it.native.database=mysql or postgresql or opengauss
